--- a/css/main.css
+++ b/css/main.css
@@ -4,3 +4,58 @@
     display: flex;
     flex-direction: row;
 }
+
+.hidden {
+    display: none;
+}
+
+.box {
+   border-radius: 5px;
+}
+
+#column-1 {
+    background-color: #ff88ad;
+    width: auto;
+    height: 300px;
+}
+
+#column-2 {
+    background-color: #e50000; 
+    width: auto;
+    height: 300px;
+}
+
+@media screen and (min-width: 641px) { 
+.hidden {
+    display: block;
+}
+
+#column-1 {
+    background-color: #6ebeff;
+    width: 25%;
+    height: 600px;
+}
+
+#column-2 {
+    background-color: #cc7aff; 
+    width: 25%;
+    height: 600px;
+}
+
+#column-3 {
+    background-color: #9f9f9f; 
+    width: 25%;
+    height: 600px;
+}
+
+#column-4 {
+    background-color: #694b40; 
+    width: 25%;
+    height: 600px;
+}
+
+#columns {
+    display: flex;
+    flex-direction: row;
+}
+}
